fixes fullscreen to center-align content by default

--- a/_assets/css/monolith/_config.scss
+++ b/_assets/css/monolith/_config.scss
@@ -22,9 +22,10 @@ $global-font-sans: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen
 $global-font-serif: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", Georgia, serif;
 $global-monospace: monospace, monospace;
 $global-font-size: 16px;
-$global-font-bold: bold;
-$global-font-normal: normal;
-$global-font-italic: italic;
+$global-font-weight-normal: normal;
+$global-font-weight-bold: bold;
+$global-font-style-normal: normal;
+$global-font-style-italic: italic;
 
 $primary-color: goldenrod;
 $secondary-color: crimson;
