--- a/_assets/css/monolith/components/grid/_utilities.scss
+++ b/_assets/css/monolith/components/grid/_utilities.scss
@@ -20,7 +20,7 @@
 
     .#{$row} {
       @include flex($grow: 1, $shrink: 1, $basis: auto);
-      align-content: center;
+      align-items: center;
     }
 
     .#{$row} {
